Implementada sección 'About Me' y 'Features' con desplazamiento suave
Agregada sección 'About Me' con una descripción personal y se implementó la funcionalidad de desplazamiento suave para desplazarse automáticamente a la sección correspondiente al hacer click en los enlaces 'About Me' o 'Features' en la barra de navegación. También se crearon tarjetas para mostrar las tecnologías y frameworks que domino con sus logos y una breve descripción de cada uno en la sección de 'Features'.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+main {
+    position: relative;
+    background-image: url('/teclado.jpg');
+    background-size: cover;
+    
+  }
 
-
+  body::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Ajusta el valor de opacidad (0.5) según tus necesidades */
+  }
 
