--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@ main {
     position: relative;
     background-image: url('/teclado.jpg');
     background-size: cover;
-    
+    height: 100%;
   }
 
   body::after {
@@ -16,6 +16,6 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Ajusta el valor de opacidad (0.5) según tus necesidades */
+    background-color: rgba(0, 0, 0, 0.7);
   }
 
