--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,20 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-main {
-    position: relative;
-    background-image: url('/teclado.jpg');
-    background-size: cover;
-    height: 100%;
+.menu-open {
+    animation: slide-in 0.3s ease-in-out;
   }
-
-  body::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+  
+  @keyframes slide-in {
+    from {
+      transform: translateX(100%);
+    }
+    to {
+      transform: translateX(0);
+    }
   }
 
