Agregado nuevo proyecto en la sección de Proyectos con enlaces correspondientes y actualización de estilos de las tarjetas.
Hoy se realizó un commit que introduce un nuevo proyecto en la sección de Proyectos. El nuevo proyecto se presenta junto con sus enlaces relevantes, incluyendo el enlace al repositorio y el enlace de despliegue. Además, hemos renovado los estilos de las tarjetas de proyectos para mejorar la apariencia general y la experiencia del usuario. Los nuevos estilos de tarjetas ofrecen un diseño más atractivo que complementa el contenido del proyecto.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,10 @@
 .menu-open {
     animation: slide-in 0.3s ease-in-out;
   }
+
+.image-bg{
+    height: 230px;
+  }
   
   @keyframes slide-in {
     from {
