--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,49 @@
   }
 
 .image-bg{
-    height: 230px;
+    height: 220px;
+  }
+
+  .logo{
+    background-size: cover;
+    width: 60px;
+    height: 40px;
+  }
+
+.menu-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 36px;
+    height: 30px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+  }
+  
+  .menu-line {
+    height: 6px;
+    background-color: white;
+    transition: transform 0.3s ease;
+    border-radius: 8px;
+  }
+  
+  .line-1-cross {
+    transform: translateY(7px) rotate(-45deg);
+  }
+  
+  .line-2-hidden {
+    opacity: 0;
+  }
+  
+  .line-3-cross {
+    transform: translateY(-13px) rotate(45deg);
+  }
+  
+
+  @media screen and (min-width: 1024px) {
+    .image-bg {
+      height: 205px;
+    }
   }
   
   @keyframes slide-in {
